--- a/projects.css
+++ b/projects.css
@@ -20,7 +20,7 @@ body.fade-in {
 }
 
 body {
-  background-color: #0a0a0a;
+  background-color: black;
   color: #ffffff;
   line-height: 1.6;
   font-size: 18px;
